<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0001FC">

    <TextView

        android:id="@+id/connexion"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal|top"
        android:text="@string/connexion"
        android:textAppearance="@style/connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_account"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="248dp"
        android:background="#FFFFFF"
        android:elevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/con"
        android:layout_width="185dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/create_an_a"
        android:textAppearance="@style/create_an_a"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_account"
        app:layout_constraintEnd_toEndOf="@+id/btn_account"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/btn_account"
        app:layout_constraintTop_toTopOf="@+id/btn_account"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/ButtonGG"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:background="#FFFFFF"
        android:elevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_account"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/google_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:background="@drawable/googleicon"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/ButtonGG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_account"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/connectGG"
        android:layout_width="185dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/connectGG"
        android:textAppearance="@style/connectGG"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/ButtonGG"
        app:layout_constraintEnd_toEndOf="@+id/ButtonGG"
        app:layout_constraintStart_toStartOf="@+id/ButtonGG"
        app:layout_constraintTop_toTopOf="@+id/ButtonGG"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/ButtonFB"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:background="#483d8b"
        android:elevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonGG"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/facebook_ic"
        android:layout_width="24.17dp"
        android:layout_height="25.16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:background="@drawable/facebookicon"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/ButtonFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ButtonFB"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/connectfb"
        android:layout_width="200dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/connectfb"
        android:textAppearance="@style/connectfb"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/ButtonFB"
        app:layout_constraintEnd_toEndOf="@+id/ButtonFB"
        app:layout_constraintStart_toStartOf="@+id/ButtonFB"
        app:layout_constraintTop_toTopOf="@+id/ButtonFB"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/skip_for_no"
        android:layout_width="276dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="72dp"
        android:gravity="center_horizontal|top"
        android:text="@string/skip_for_no"
        android:textAppearance="@style/skip_for_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btn_login1"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:background="#0000FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonFB"
        app:layout_constraintVertical_bias="0.222"
        app:srcCompat="@drawable/login" />


</androidx.constraintlayout.widget.ConstraintLayout>